test/scripted/compilation2/errors/cannot_cast.bnj
# test:subtest
# test:error 6:13 "cannot cast from 'f32' to 'bool'" 

func main() {
    var a = 5.0;
    var b = a as bool;
}

# test:subtest
# test:error 16:13 "cannot cast from 'S' to 'f64'" 

struct S {}

func main() {
    var a = S {};
    var b = a as f64;
}
